# ChangeLog for virtual/perl-DB_File
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-DB_File/ChangeLog,v 1.21 2009/02/01 14:44:32 tove Exp $

*perl-DB_File-1.818 (01 Feb 2009)

  01 Feb 2009; Torsten Veller <tove@gentoo.org> +perl-DB_File-1.818.ebuild:
  Version bump

*perl-DB_File-1.817 (08 Dec 2008)

  08 Dec 2008; Robin H. Johnson <robbat2@gentoo.org>
  +perl-DB_File-1.817.ebuild:
  Version bump.

  31 Mar 2008; Jeroen Roovers <jer@gentoo.org> perl-DB_File-1.815.ebuild:
  Stable for HPPA too.

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> ChangeLog:
  Stable on mips.

  15 Oct 2007; Markus Rothe <corsair@gentoo.org> perl-DB_File-1.815.ebuild:
  Stable on ppc64

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org> perl-DB_File-1.815.ebuild:
  alpha/ia64/x86 stable

  11 May 2007; Joshua Kinard <kumba@gentoo.org> perl-DB_File-1.815.ebuild:
  Stable on mips.

  07 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  perl-DB_File-1.815.ebuild:
  ppc stable

  17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  perl-DB_File-1.815.ebuild:
  Stable on sparc

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  perl-DB_File-1.815.ebuild:
  Marking stable amd64

*perl-DB_File-1.815 (06 Feb 2007)

  06 Feb 2007; Michael Cummings <mcummings@gentoo.org>
  +perl-DB_File-1.815.ebuild:
  Version bump

  01 Dec 2006; Tony Vroon <chainsaw@gentoo.org> perl-DB_File-1.814.ebuild:
  Use double quotes in the test, it fails otherwise. As suggested by Jakub Muc
  <jakub@gentoo.org>.

  20 Nov 2006; Sven Wegener <swegener@gentoo.org> perl-DB_File-1.814.ebuild:
  Drop berkdb from IUSE, this package doesn't use it. Move checking from
  src_unpack to pkg_setup.

  19 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  perl-DB_File-1.814.ebuild:
  Updating virtual to catch perls built without berkdb

  25 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -perl-DB_File-1.811.ebuild, perl-DB_File-1.813.ebuild: