@@ -1,6 +1,11 @@
 # ChangeLog for virtual/perl-DB_File
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-DB_File/ChangeLog,v 1.21 2009/02/01 14:44:32 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-DB_File/ChangeLog,v 1.22 2009/02/20 06:44:45 tove Exp $
+
+*perl-DB_File-1.819 (20 Feb 2009)
+
+  20 Feb 2009; Torsten Veller <tove@gentoo.org> +perl-DB_File-1.819.ebuild:
+  Version bump
 
 *perl-DB_File-1.818 (01 Feb 2009)
 
